# machine-learning-of-c

./: CMakeLists.txt  README.md  run.sh  run_examples.sh  run_gdb.sh  run_tests.sh
examples/: CNN_example.cpp  fully_connected_example.cpp  fully_connected_example_1.cpp
include/: autograd.hpp  ops.hpp  tensor.hpp
include/data/: data_loader.hpp  image_loader.hpp  mnist_loader.hpp
include/loss/: cross_entropy_loss.hpp  loss.hpp  mse_loss.hpp  nll_loss.hpp
include/nn/: conv.hpp  conv_transpose.hpp  dropout2d.hpp  flatten.hpp  linear.hpp  module.hpp  pooling.hpp
include/optimizer/: adam.hpp  optimizer.hpp  sgd.hpp
src/: autograd.cpp  ops.cpp  tensor.cpp
src/data/: data_loader.cpp  image_loader.cpp  mnist_loader.cpp
src/loss/: cross_entropy_loss.cpp  mse_loss.cpp  nll_loss.cpp
src/nn/: conv.cpp  conv_transpose.cpp  dropout2d.cpp  flatten.cpp  linear.cpp  pooling.cpp
src/ops/: activation.cpp  math.cpp
src/optimizer/: adam.cpp  sgd.cpp
tests/: test_adam.cpp  test_conv.cpp  test_conv_transpose.cpp  test_cross_entropy_loss.cpp  test_data_loader.cpp  test_dropout2d.cpp  test_flatten.cpp  test_linear.cpp  test_loader.cpp  test_mseloss.cpp  test_nll_loss.cpp  test_sgd.cpp  test_tensor.cpp
